# macholib

./: .gitignore  .hgignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  MANIFEST.in  NEWS.txt  README.rst  README.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
doc/: MachO.rst  MachoOGraph.rst  MachoOStandalone.rst  SymbolTable.rst  changelog.rst  conf.py  dyld.rst  dylib.rst  index.rst  license.rst  macho_o.rst  ptypes.rst  scripts.rst
macholib/: MachO.py  MachOGraph.py  MachOStandalone.py  SymbolTable.py  __init__.py  __main__.py  _cmdline.py  compat.py  dyld.py  framework.py  itergraphreport.py  mach_o.py  macho_dump.py  macho_find.py  macho_standalone.py  ptypes.py  test_mach_o.py  util.py
macholib_tests/: __init__.py  test_MachO.py  test_MachOGraph.py  test_MachOStandalone.py  test_SymbolTable.py  test_command_line.py  test_compat.py  test_dyld.py  test_dylib.py  test_framework.py  test_itergraphreport.py  test_mach_o.py  test_macho_dump.py  test_macho_find.py  test_macho_standalone.py  test_ptypes.py  test_version.py
