[metadata]
name = macholib
version = 1.4.1
description = Mach-O header analysis and editing
long_description_file = README.txt doc/changelog.rst
classifiers = 
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Build Tools

maintainer = Ronald Oussoren
maintainer_email = ronaldoussoren@mac.com
url = http://bitbucket.org/ronaldoussoren/macholib
download_url = http://pypi.python.org/pypi/macholib
packages = macholib
license = MIT
platforms = any
install_requires =
    altgraph >= 0.9
zip-safe = yes
console_scripts = 
    macho_find = macholib.macho_find:main
    macho_standalone = macholib.macho_standalone:main
    macho_dump = macholib.macho_dump:main
